# watchmen

./: .gitignore  README  bkp_cam.py  cam_unit.py  camera.py  central.py  central_reporter.py  communicator.py  constants.py  create-demo-service.sh  demo_run_main.py  detect.py  detect_enhanced.py  detect_enhanced_2.py  device.py  device_info.py  devnode.py  dump-test-images-service.sh  dump-test-images.sh  esp32_comm.py  event_detector.py  event_detector_2.py  file_communicator.py  gps.py  image.py  ipc_communicator.py  ipc_network.py  layout.py  lora_comm.py  master-setup.sh  new_test_lora.py  notes.txt  push_event.sh  requirements.txt  rf_comm.py  run_demo_main.py  run_demob.py  run_devices.py  run_network.py  setup.sh  (+9 more)
3dr-radio/: asyncio.py  asyncio_syntax_definition.py  constants.py  enc.py  hybrid_encryption.py  laptop_radio.py  main.py  main2.py  main_lora.py  openmv_radio.py  radio.py  radio_test.py  sx1262.py
RF24/: new_rx.py  new_tx.py  rf24_rx.py  rf24_tx.py  setup_test.py
camera-capture-service/: setup.sh  usb-camera-power-cycle.sh
clear-images-service/: setup-central.sh  setup.sh
datacollect/: main.py
demo_main/: config.py  event_classifier.py  health_monitoring.py  image_processor.py  main.py  mqtt_publisher.py  requirements.txt
event-detect-service/: event-detector.service  event_detector.py  setup.sh
frontend/: next.config.ts  package-lock.json  package.json  prettier.config.mjs
lora-mod-communication/: Ra-01SH-LoRa-module-specification.md  Semtech_SX1276_to_rpi.md  (+12 more)
netrajaal/test/esp32-core-sx1262/components/radiolib/: CMakeLists.txt
(+505 files in other folders)
